--- a/catBadmin.html
+++ b/catBadmin.html
@@ -142,23 +142,22 @@
                     <div class="row">
                         <div class="col-12">
                             <div class="section-title">
-                                <h4 class="m-0 text-uppercase font-weight-bold">Category: Sepak Bola</h4>
+                                <h4 class="m-0 text-uppercase font-weight-bold">Category: Badminton</h4>
                                 <a class="text-secondary font-weight-medium text-decoration-none" href="">View All</a>
                             </div>
                         </div>
                         <div class="col-lg-6 news-item">
                             
                             <div class="position-relative mb-3">
-                                <img class="img-fluid w-100" src="imgg/bola/argentina.jpeg" style="object-fit: cover;">
+                                <img class="img-fluid w-100" src="imgg/badd1.jpg" style="object-fit: cover;">
                                 <div class="bg-white border border-top-0 p-4">
                                     <div class="mb-2">
                                         <a class="badge badge-primary text-uppercase font-weight-semi-bold p-2 mr-2"
-                                            href="">Football News</a>
-                                        <a class="text-body" href=""><small>Nov 17, 2023</small></a>
+                                            href="">Badminton</a>
+                                        <a class="text-body" href=""><small>Nov 30, 2023</small></a>
                                     </div>
-                                    <a class="h4 d-block mb-3 text-secondary text-uppercase font-weight-bold" href="https://sport.detik.com/sepakbola/bola-dunia/d-7041514/argentina-vs-uruguay-diwarnai-ribut-ribut-lionel-messi-dkk-kalah-0-2">Argentina Vs Uruguay: Diwarnai Ribut-ribut, Lionel Messi dkk kalah 0-2</a>
-                                    <p class="m-0">Laga berjalan sengit di Stadion Alberto Jose Armando atau La Bombonera, Buenos Aires, Jumat (17/11/2023) pagi WIB. Tensi panas mewarnai jalannya laga.
-                                        </p>
+                                    <a class="h4 d-block mb-3 text-secondary text-uppercase font-weight-bold" href="">Hasil Syed Modi International 2023 - Tikungan Tajam Alwi Farhan Bikin Wakil Malaysia Ngenes dalam 43 Menit</a>
+                                    <p class="m-0">Tunggal putra muda Indonesia, Alwi Farhan tampil memukau di babak kedua Syed Modi International menghadapi wakil Malaysia, Justin Hoh.</p>
                                 </div>
                                 <div class="d-flex justify-content-between bg-white border border-top-0 p-4">
                                     <div class="d-flex align-items-center">
