--- a/catMotogp.html
+++ b/catMotogp.html
@@ -142,7 +142,7 @@
                     <div class="row">
                         <div class="col-12">
                             <div class="section-title">
-                                <h4 class="m-0 text-uppercase font-weight-bold">Category: Sepak Bola</h4>
+                                <h4 class="m-0 text-uppercase font-weight-bold">Category: MotoGP</h4>
                                 <a class="text-secondary font-weight-medium text-decoration-none" href="">View All</a>
                             </div>
                         </div>
